# edgedb-cli

./: .env  .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  Cargo.lock.orig  Cargo.toml  README.md  build.rs  edgedb-init.ps1  edgedb-init.sh  flake.nix  shell.nix  vagga.yaml
.github/: Makefile  determine-version.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  install-unsupported.md
.github/workflows/: .gitattributes  install-edgedb.sh  install_tests.yaml  nightly-test.yml  nightly.yml  release.yml  replace_version.sh  testing.yml  tests.yml
.github/workflows.src/: build.inc.yml  build.targets.yml  nightly.targets.yml  nightly.tpl.yml  release.targets.yml  release.tpl.yml
edgedb-cli-derive/: Cargo.toml
edgedb-cli-derive/src/: attrib.rs  into_app.rs  into_args.rs  kw.rs  lib.rs  macros.rs  types.rs
edgedb-cli-derive/src/derives/: mod.rs  settings.rs
edgedb-cli-md/: Cargo.toml
edgedb-cli-md/src/: lib.rs
edgedb-client/: Cargo.toml
edgedb-client/examples/: tran.rs
edgedb-client/src/: builder.rs  client.rs  credentials.rs  lib.rs
src/: async_util.rs  branding.rs  browser.rs  bug.rs  classify.rs  client.rs  collect.rs  completion.rs  config.rs  connect.rs  credentials.rs  directory_check.rs  error_display.rs  format.rs  highlight.rs  hint.rs  interactive.rs  interrupt.rs  log_levels.rs  main.rs  markdown.rs  non_interactive.rs  options.rs  platform.rs  proc.rs  process.rs  process.rs.orig  prompt.rs  question.rs  reader.rs  repl.rs  self_install.rs  self_migrate.rs  self_upgrade.rs  server_params.rs  statement.rs  table.rs  tty_password.rs  variables.rs  version_check.rs
src/analyze/: contexts.rs  mod.rs  model.rs  table.rs  tree.rs
src/branch/: config.rs  connections.rs  context.rs  create.rs  current.rs  drop.rs  list.rs  main.rs  merge.rs  mod.rs  option.rs  rebase.rs  rename.rs  switch.rs  wipe.rs
src/cli/: cli_install.rs  cli_migrate.rs  directory_check.rs  env.rs  gen_completions.rs  install.rs  logo.rs  logo.txt  logo_blocks.txt  main.rs  markdown.rs  migrate.rs  mod.rs  options.rs  self_install.rs  self_migrate.rs  self_upgrade.rs  upgrade.rs
src/cloud/: auth.rs  backups.rs  client.rs  main.rs  mod.rs  ops.rs  options.rs  secret_keys.rs  versions.rs
src/commands/: backslash.rs  branching.rs  cert.rs  cli.rs  command_result.rs  configure.rs  database.rs  describe.rs  describe_schema.rs  dump.rs  execute.rs  exit.rs  filter.rs  helpers.rs  info.rs  list.rs  list_aliases.rs  list_branches.rs  list_casts.rs  list_databases.rs  list_indexes.rs  list_modules.rs  list_object_types.rs  list_ports.rs  list_roles.rs  list_scalar_types.rs  mod.rs  options.rs  parser.rs  psql.rs  restore.rs  roles.rs  table.rs  type_names.rs  ui.rs
src/hooks/: mod.rs
src/migrations/: apply.rs  branch.rs  context.rs  create.rs  db_migration.rs  dev_mode.rs  edb.rs  edit.rs  extract.rs  format_upgrade.rs  grammar.rs  log.rs  merge.rs  migrate.rs  migration.rs  mod.rs  options.rs  print_error.rs  prompt.rs  rebase.rs  source_map.rs  sourcemap.rs  squash.rs  status.rs  sync.rs  timeout.rs  upgrade_check.rs  upgrade_format.rs
src/options/: describe.rs
src/outputs/: mod.rs  tab_separated.rs
src/portable/: backup.rs  config.rs  control.rs  create.rs  credentials.rs  destroy.rs  destroy.rs.orig  exit_codes.rs  extension.rs  info.rs  install.rs  link.rs  linux.rs  linux.rs.orig  list_versions.rs  local.rs  macos.rs  main.rs  mod.rs  options.rs  platform.rs  platform.rs.orig  project.rs  repository.rs  reset_password.rs  resize.rs  revert.rs  status.rs  status.rs.orig  uninstall.rs  upgrade.rs  ver.rs  windows.rs
src/portable/instance/: backup.rs  control.rs  create.rs  credentials.rs  destroy.rs  link.rs  mod.rs  reset_password.rs  resize.rs  revert.rs  status.rs  unlink.rs  upgrade.rs
src/portable/project/: info.rs  init.rs  manifest.rs  mod.rs  unlink.rs  upgrade.rs
src/portable/server/: info.rs  install.rs  list_versions.rs  mod.rs  uninstall.rs
src/print/: buffer.rs  color.rs  format.rs  formatter.rs  json.rs  mod.rs  native.rs  stream.rs  style.rs  tests.rs
src/project/: config.rs  info.rs  init.rs  link.rs  main.rs  mod.rs  options.rs  unlink.rs  upgrade.rs
src/prompt/: variable.rs
src/server/: authenticate.rs  centos.rs  control.rs  create.rs  debian.rs  debian_like.rs  destroy.rs  detect.rs  distribution.rs  docker.rs  errors.rs  info.rs  init.rs  install.rs  link.rs  linux.rs  list_versions.rs  macos.rs  main.rs  metadata.rs  methods.rs  mod.rs  options.rs  os_trait.rs  package.rs  remote.rs  reset_password.rs  revert.rs  status.rs  ubuntu.rs  uninstall.rs  unix.rs  unknown_os.rs  upgrade.rs  version.rs  windows.rs
src/server/detect/: linux.rs  macos.rs
src/server/install/: centos.rs  debian.rs  exit_codes.rs  operation.rs  settings.rs  ubuntu.rs
src/watch/: files.rs  fs_watcher.rs  main.rs  migrate.rs  mod.rs  options.rs  scripts.rs
tests/: .gitignore  certs.rs  docker.rs  docker_portable_wrapper.rs  docker_test_wrapper.rs  measure.rs  portable_project.rs  portable_project_dir.rs  portable_shared.rs  portable_smoke.rs  util.rs
tests/common/: docker.rs  measure.rs  util.rs
tests/func/: configure.rs  dump_restore.rs  help.rs  instance_link.rs  interactive.rs  main.rs  migrations.rs  non_interactive.rs
tests/github-actions/: install.rs  main.rs
tests/github-nightly/: common.rs  compat.rs  install.rs  main.rs  project.rs  upgrade.rs
tests/migrations/: .gitignore
tests/migrations/db1/error/: bad.esdl  default.esdl
tests/migrations/db2/: default.esdl
tests/migrations/db3/: default.esdl
tests/migrations/db5/: 1.esdl  2.esdl  3.esdl
tests/migrations/db6/: a.esdl  default.esdl
tests/migrations/db_eof_err/: default.esdl
tests/proj/project2/: edgedb.toml
tests/proj/project3/: .gitignore  gel.toml
tests/proj/project4/: .gitignore  gel.toml
tests/server/: centos.rs  certs.rs  debian.rs  docker.rs  main.rs  self_install.rs  ubuntu.rs
tests/shared-client-tests/: Cargo.toml  build.rs
tests/shared-client-tests/tests/: portable_shared.rs  shared_client_tests.rs
(+24 files in other folders)
