[workspace]
members = [
    ".",
    "edgedb-cli-derive",
]

[package]
name = "edgedb-cli"
license = "MIT/Apache-2.0"
version = "3.1.0-dev"
authors = ["EdgeDB Inc. <hello@edgedb.com>"]
edition = "2018"

[dependencies]
edgeql-parser = {git = "https://github.com/edgedb/edgedb"}
edgedb-protocol = {git = "https://github.com/edgedb/edgedb-rust/", features=["all-types"]}
edgedb-derive = {git = "https://github.com/edgedb/edgedb-rust/"}
edgedb-errors = {git = "https://github.com/edgedb/edgedb-rust/"}
edgedb-tokio = {git = "https://github.com/edgedb/edgedb-rust/", features=["admin_socket", "unstable"]}
snafu = {version="0.7.0", features=["backtraces"]}
anyhow = "1.0.23"
bytes = "1.0.1"
blake2b_simd = "1.0.0"
blake3 = "1.1.0"
rustyline = { git="https://github.com/tailhook/rustyline", branch="edgedb_20210403"}
clap = {version="3.2.23", features=["derive", "cargo"]}
clap_complete = "3.2.5"
strsim = "0.10.0"
whoami = "1.1"
is-terminal = "0.4.4"
scram = "0.6.0"
rpassword = "6.0.1"
colorful = "0.2.1"
terminal_size = "0.2.5"
bigdecimal = "0.3"
num-bigint = "0.4.3"
humantime = "2.0.0"
humantime-serde = "1.0.0"
once_cell = "1.3.1"
chrono = {version="0.4.0", default-features=false}
unicode-segmentation = "1.6.0"
unicode-width = "0.1.10"
serde = "1.0"
serde_json = {version="1.0", features=["preserve_order"]}
serde_path_to_error = "0.1.3"
serde_str = {git="https://github.com/tailhook/serde-str"}
serde_millis = "0.1.1"
dirs = "4"
uuid = {version="1.1.2", features=["serde"]}
prettytable-rs = {version="0.10.0", default-features=false}
tempfile = "3.1.0"
codespan-reporting = "0.11"
termcolor = "1.1.0"
crossterm = "0.23.1"
async-listen = "0.2.0"
sha1 = "0.10.1"
hex = {version="0.4.3", features=["serde"]}
textwrap = {version="0.15.0", features=["terminal_size"]}
log = "0.4.8"
env_logger = "0.9.0"
os-release = "0.1.0"
reqwest = {version="0.11.11", features=["json", "native-tls"]}
native-tls = {version="0.2.4"}
thiserror = "1.0.16"
which = {version="4", default-features=false}
# we need slicing of indexmap, so need version 2.0
indexmap = {git="https://github.com/bluss/indexmap", rev="11ac52c", features=["serde"]}
term = "0.7"
libc = "0.2.68"
urlencoding = "2.1.0"
fn-error-context = "0.2"
combine = "4.2.1"
sha2 = "0.10.2"
base32 = "0.4.0"
rand = "0.8.2"
downcast-rs = "1.2.0"
base64 = "0.13"
ring = {version="0.16.15", features=["std"]}
shell-escape = "0.1.5"
wait-timeout = "0.2.0"
indicatif = "0.17.0"
url = { version = "2.1.1", features=["serde"] }
immutable-chunkmap = "1.0.1"
regex = "1.4.5"
toml = "0.5.8"
termimad = "0.20.1"
minimad = "0.9.0"
edgedb-cli-derive = { path="edgedb-cli-derive" }
fs-err = "2.6.0"
pem = "1.0.2"
rustls = {version="0.20.2", features=["dangerous_configuration"]}
webpki = "0.22.0"
tokio-stream = "0.1.11"
futures-util = "0.3.15" # used for signals
clicolors-control = "1.0.1"
backtrace = "0.3.61"
arc-swap = "1.4.0"
ctrlc = "3.2.0"
crossbeam-utils = "0.8.5"
tar = "0.4.37"
zstd = "0.10"
semver = {version="1.0.4", features=["serde"]}
fd-lock = "3.0.2"
zip = "0.6.2"
libflate = "1.1.1"
open = "3.0.2"
tokio = {version="1.23.0",features=[
    "macros", "rt", "rt-multi-thread", "fs", "process", "io-std", "net",
]}
dissimilar = "1.0.6"
notify = "5.0.0"
gethostname = "0.4.1"
bitvec = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.1"
pretty_assertions = "1.2.0"
shutdown_hooks = "0.1.0"
test-case = "2.0.0"
openssl = "0.10.30"
tokio = {version="1.1.0", features=["rt-multi-thread"]}
warp = {version="0.3.2", default-features=false, features=["tls"]}

[build-dependencies]
serde_json = "1.0"

[features]
dev_mode = []
github_action_install = []
github_nightly = []
portable_tests = []
docker_test_wrapper = []

[target.'cfg(unix)'.dependencies]
signal-hook = {version="0.3.10", features=["iterator"]}
nix = "0.26.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
winreg = "0.10.1"
wslapi = "0.1.3"

[target.'cfg(unix)'.dev-dependencies]
rexpect = {git="https://github.com/tailhook/rexpect", branch="default_terminal_size"}

[target.'cfg(target_env="musl")'.dependencies]
native-tls = {version="0.2.4", features=["vendored"]}

[[bin]]
name = "edgedb"
path = "src/main.rs"

[profile.dev]
opt-level = 2 # 1 -- needed so windows don't get stack overflow, 2 - for GHA

[profile.release]
debug = true
lto = true
