[package]
name = "edgedb-cli-derive"
license = "MIT/Apache-2.0"
version = "0.4.0"
authors = ["EdgeDB Inc. <hello@edgedb.com>"]
edition = "2018"

[dependencies]
clap = "4.4.6"
clap_generate = "3.0.3"
termimad = "0.20.1"
syn = {version="1.0.72", features=["extra-traits"]}
quote = "1.0.9"
proc-macro2 = "1.0.78"
proc-macro-error = "1.0.4"
trybuild = "1.0.19"
indexmap = "1.9.3"
heck = "0.4.0"

[lib]
proc-macro = true
