[package]
name = "edgedb-cli-derive"
license = "MIT/Apache-2.0"
version = "0.4.0"
authors = ["EdgeDB Inc. <hello@edgedb.com>"]
edition = "2018"

[dependencies]
syn = {version="1.0.72", features=["extra-traits"]}
quote = "1.0.9"
proc-macro2 = "1.0.78"
proc-macro-error = "1.0.4"
clap = {workspace = true}
clap_generate = {workspace = true}
termimad = {workspace = true}
trybuild = {workspace = true}
indexmap = {workspace = true}
heck = {workspace = true}

[lib]
proc-macro = true
