[package]
name = "edgedb-cli-derive"
license = "MIT/Apache-2.0"
version = "0.4.0"
authors = ["EdgeDB Inc. <hello@edgedb.com>"]
edition = "2018"

[dependencies]
syn = {version="2.0.76", features=["extra-traits", "full"]}
quote = "1.0.9"
proc-macro2 = "1.0.78"
proc-macro-error = {version = "1.0.4", default-features = false}
clap = {workspace = true}
clap_generate = {workspace = true}
termimad = {workspace = true}
trybuild = {workspace = true}
indexmap = {workspace = true}
heck = {workspace = true}

[lib]
proc-macro = true
test = false

[lints.clippy]
useless_format = 'allow'
collapsible_if = 'allow'
derive_partial_eq_without_eq = 'allow'
zero_ptr = 'allow'
manual_strip = 'allow'
new_ret_no_self = 'allow'
type_complexity = 'allow'
vec_init_then_push = 'allow'
while_let_on_iterator = 'allow'
too_many_arguments = 'allow'
clone_on_copy = 'allow'
