[package]
name = "shared-client-tests"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["EdgeDB Inc. <hello@edgedb.com>"]
edition = "2018"

[build-dependencies]
serde_json = "1.0"

[lib]
path = "lib.rs"
test = false
doctest = false

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "2.0.8"
predicates = "3.1.2"
serde_json = "1.0"
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust/", features = [
    "all-types",
] }
sha1 = "0.10.1"
indexmap = { workspace = true }
hex = { version = "0.4.3", features = ["serde"] }
